--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Resume</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, inital-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/app.css" media="screen">
     <link rel="stylesheet" href="css/print/print.css" media="print">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
