--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://codepen.io/gretagr/" target="_blank"><i class="fab fa-codepen"></i></a>
       </nav>
 
-      <section id="profile" class="profile closed">
+      <section id="profile" class="profile open">
 
         <nav class="tag eye">
             <img src="images/profile.png">
@@ -36,7 +36,7 @@
               <h3>junior front-end developer</h2>
 
               <article class="about">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, laboris nisi ut aliquip ex ea commodo consequat. Duis reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </article>
           </section>
 
