--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
             <h2>CONTACT</h2>
         </nav>
 
-        <form id="form" name="contact-form" action="send.php" method="POST">
+        <form id="form" name="contact-form" method="POST" action="https://formspree.io/greta.grigelionyte@gmail.com">
 
             <input type="text" name="firstName" placeholder="first name" required/>
 
