--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
                 <img src="images/arrow.png" />
               </div>
           </button>
+          <input type="hidden" name="_next" value="https://gretagr.github.io/CV/" />
         </form>
       </section>
       <!-- end of main contect class  ---------------------------->
