--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Resume</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/app.css" media="screen">
+    <link rel="stylesheet" href="src/sass/app.min.css" media="screen">
     <link rel="stylesheet" href="css/print/print.css" media="print">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
@@ -37,7 +37,7 @@
               <h3>junior front-end developer</h2>
 
               <article class="about">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, laboris nisi ut aliquip ex ea commodo consequat. Duis reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p>Hello, I am a junior front-end developer from Vilnius, Lithuania. I am currently looking for a job as a junior front-end developer. I am keen to gain more experience in the field. For this reason, I am looking for a company willing to offer me a placement among its developers.  In return, I would offer my full commitment, pixel-perfect attitude,  and friendly addition to your team.</p>
               </article>
           </section>
 
@@ -73,7 +73,7 @@
 
               <div class="resume_item">
                 <h3 class="side-text edu">EDUCATION</h3>
-                <h4>2017 - NOW</h4>
+                <h4>2017 - 2018</h4>
                 <span><a href="https://www.udacity.com/google-scholarships" target="_blank">UDACITY</a>, front-end nanodegree</span>
                 <p>Google & Udacity Nanodegree scholarship. First phase (google developer challenge 2017.11 2018.02) second phase (full Nanodegree  scholarship for challenge winners 2018.02 - 2018.06).</p>
               </div>
@@ -97,7 +97,12 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
             </section>
 
             <section class="experience">
-
+              <div class="resume_item">
+                <h3 class="side-text exp">EMPLOYMENT</h3>
+                <h4>2019 <span class="additional_txt">(conract work)</span></h4>
+                <span>IT Lecturer at <a href="http://www.vtvpmc.lt/index.php/en/" target="_blank">VVETC</a></span>
+                <p>Basics of web development</p>
+              </div>
               <div class="resume_item">
                 <h3 class="side-text exp">EMPLOYMENT</h3>
                 <h4>2012 - 2015</h4>
@@ -106,7 +111,7 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
               </div>
               <div class="resume_item">
                 <h4>2011 - 2015</h4>
-                <span>UAB "STUDIO MODERNA"</span>
+                <span>UAB "Studio Moderna"</span>
                 <p>Website administrator. </p>
               </div>
 
@@ -226,7 +231,22 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
 
 
         <div id="gallery" class="gallery">
-
+          <figure class="gallery-item">
+            <img src="images/veggies.png" alt="portfolio item visualisation">
+            <figcaption>
+              <p>Veggies website template</p>
+              <h3>2019</h3>
+            </figcaption>
+            <a href="https://gretagr.github.io/Veggies/" target="_blank"></a>
+          </figure>
+          <figure class="gallery-item">
+            <img src="images/ms-transport.png" alt="portfolio item visualisation">
+            <figcaption>
+              <p>Logistics services website</p>
+              <h3>2018</h3>
+            </figcaption>
+            <a href="http://www.mslogistics.eu/" target="_blank"></a>
+          </figure>
           <figure class="gallery-item">
             <img src="images/business.png" alt="portfolio item visualisation">
             <figcaption>
@@ -242,7 +262,16 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
               <h3>2018</h3>
               <p>Personal portfolio website</p>
             </figcaption>
-            <a href="https://gretagr.github.io/resume/" target="_blank"></a>
+            <a href="https://gretagr.github.io/CV/" target="_self"></a>
+          </figure>
+
+          <figure class="gallery-item">
+            <img src="images/pink-donut.png" alt="portfolio item visualisation">
+            <figcaption>
+              <p>Pink Donut website template</p>
+              <h3>2018</h3>
+            </figcaption>
+            <a href="https://gretagr.github.io/pink-donut/" target="_blank"></a>
           </figure>
 
           <figure class="gallery-item">
@@ -254,23 +283,6 @@ Basic knowlege of PhP and Java(Android) development. Profile of skills and compe
             <a href="https://gretagr.github.io/parallax/" target="_blank"></a>
           </figure>
 
-          <figure class="gallery-item">
-            <img src="images/resume2.png" alt="portfolio item visualisation">
-            <figcaption>
-              <p>Personal resume/CV website</p>
-              <h3>2017</h3>
-            </figcaption>
-            <a href="https://gretagr.github.io/resume-cv/" target="_blank"></a>
-          </figure>
-
-          <figure class="gallery-item">
-            <img src="images/pink-donut.png" alt="portfolio item visualisation">
-            <figcaption>
-              <p>Pink Donut website template</p>
-              <h3>2017</h3>
-            </figcaption>
-            <a href="https://gretagr.github.io/pink-donut/" target="_blank"></a>
-          </figure>
 
       </section>
         <!-- end of main portfolio class  ---------------------------->
